text adjusts in home, world and reporting

--- a/client/src/public/partials/home.html
+++ b/client/src/public/partials/home.html
@@ -15,15 +15,15 @@
       <h1 class="home-title">{{ 'HOME_INTRO' | translate }}</h1>
       <p class="lead">{{ 'HOME_INTRO_LEAD' | translate }}</p>
       <p>{{ 'HOME_INTRO_PARA' | translate }}</p>
+      <p>{{ 'HOME_INTRO_PARA_2' | translate }}</p>
     </div>
   </div>
 </div>
 <div class="container-fluid container-links">
   <div class="row">
     <div class="col-md-12">
-      <div class="container ">
+      <div class="container">
         <div class="row">
-          
           <div class="col-sm-6 col-md-3">
             <div class="box-bg box-bg-country">
               <div class="box-container">
@@ -34,13 +34,13 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-sm-6 col-md-3">
             <div class="box-bg box-bg-partner">
               <div class="box-container">
                 <a href="#!/partner" class="btn btn-link box text-center">
                   <h2>Partner</h2>
-                  <p>{{ 'HOME_REPORTING_PARA' | translate }}</p>
+                  <p>{{ 'HOME_PARTNER_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
@@ -71,7 +71,6 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-  
       <div class="container">
         <div class="row">
           <div class="col-0 col-sm-0 col-md-3"></div>
@@ -91,14 +90,13 @@
               <div class="box-container">
                 <a href="#!/rates" class="btn btn-link box text-center">
                   <h2>Exchange rates</h2>
-                  <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
+                  <p>{{ 'HOME_RATES_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-0 col-sm-0 col-md-3"></div>
         </div>
-    
       </div>
     </div>
   </div>
@@ -146,7 +144,6 @@
       </p>
     </div>
   </div>
-
 </div>
 <div class="container-fluid container-rss">
   <div class="row">
