--- a/client/src/public/partials/bilateral.html
+++ b/client/src/public/partials/bilateral.html
@@ -84,7 +84,7 @@
         {{ 'TO' | translate }}
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
       </h1>
-      <p>{{ 'BILATERAL_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'BILATERAL_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
