--- a/client/src/public/partials/rates.html
+++ b/client/src/public/partials/rates.html
@@ -17,7 +17,7 @@
           </ui-select>
         </div>
       </h1>
-      <p>{{ 'RATES_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'RATES_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
