--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -44,7 +44,7 @@
         {{ 'TO' | translate}}
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
       </h1>
-      <p>{{ 'REPORTING_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'REPORTING_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
