--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -7,7 +7,7 @@
         {{ 'TO' | translate }}
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
       </h1>
-      <p>{{ 'WORLD_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'WORLD_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
