--- a/client/src/public/partials/metadata.html
+++ b/client/src/public/partials/metadata.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="title-border">{{ 'METADATA_INTRO' | translate }}</h1>
-      <p>{{ 'METADATA_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'METADATA_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
