--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -51,7 +51,7 @@
           </ui-select>
         </div>
       </h1>
-      <p>{{ 'PARTNER_INTRO_PARA' | translate }}</p>
+      <p class="pageIntroduction">{{ 'PARTNER_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
@@ -65,7 +65,7 @@
         >
           GeoPolHist
         </a>
-        {{partnersDict[partner].label}}
+        <span class="hightlight-inline-variable">{{partnersDict[partner].label}}</span>
       </h4>
       <p ng-if="partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_INTRO' | translate}}</p>
       <p ng-if="!partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_MISSING' | translate}}</p>
@@ -106,7 +106,13 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4>{{'PARTNER_REPORTER_CITATION_TITLE' | translate}} {{partnersDict[partner].label}}</h4>
+      <h4>
+        {{'PARTNER_REPORTING_CITATION_TITLE' | translate}}
+        <span class="hightlight-inline-variable"> {{partnersDict[partner].label}}</span>
+      </h4>
+      <p class="paragraphViz">
+        {{ 'PARTNER_REPORTING_CITATION' | translate }}
+      </p>
       <div>
         <bar-chart
           class="dataviz"
@@ -129,7 +135,8 @@
     <div class="col-sm-12 well">
       <h4 class="titleMultiLine flex-title">
         <div>
-          {{'PARTNER_REPORTER_HEATMAP_TITLE_1' | translate}} {{partnersDict[partner].label}}
+          {{'PARTNER_REPORTER_HEATMAP_TITLE_1' | translate}}
+          <span class="hightlight-inline-variable">&nbsp;{{partnersDict[partner].label}}&nbsp;</span>
           {{'PARTNER_REPORTER_HEATMAP_TITLE_2' | translate}} {{'PARTNER_REPORTER_HEATMAP_TITLE_ORDER' | translate}}
           <div class="inline-select">
             <ui-select ng-model="$parent.heatmapOrder" theme="bootstrap">
@@ -162,29 +169,33 @@
           </div>
         </div>
       </h4>
+      <p class="paragraphViz">
+        {{ 'PARTNER_REPORTER_HEATMAP_INTRODUCTION' | translate }}
+      </p>
       <div class="legend">
         <ul>
           <li>
             <span class="square" style="background-color: #494949; opacity: 0.2;" />
             <span class="square" style="background-color: #494949; opacity: 0.5;" />
             <span class="square" style="background-color: #494949; opacity: 0.8;" />
-            {{'PARTNER_HEATMAP_LEGEND_FADEIN' | translate}}
+            {{'PARTNER_HEATMAP_LEGEND_REPORTING_VOLUME' | translate}}
           </li>
           <li>
-            {{'PARTNER_HEATMAP_LEGEND_PERCENTIL' | translate}}
             <ul>
               <li>
-                <span class="square" style="background-color: #f90202;" />
-                {{'PARTNER_HEATMAP_LEGEND_PERCENTIL_1' | translate}}
+                <span class="square" style="background-color: #f9b702;" />
               </li>
+              <li>< {{heatmapQuantile[heatmapField.id][0] | number:0}}£ ≤</li>
               <li>
                 <span class="square" style="background-color: #f46a00;" />
-                {{'PARTNER_HEATMAP_LEGEND_PERCENTIL_2' | translate}}
               </li>
               <li>
-                <span class="square" style="background-color: #f9b702;" />
-                {{'PARTNER_HEATMAP_LEGEND_PERCENTIL_3' | translate}}
+                ≤ {{heatmapQuantile[heatmapField.id][1] | number:0}}£ <
               </li>
+              <li>
+                <span class="square" style="background-color: #f90202;" />
+              </li>
+              <li>{{'PARTNER_HEATMAP_LEGEND_PERCENTIL' | translate}}</li>
             </ul>
           </li>
         </ul>
@@ -233,7 +244,9 @@
       <!-- Title with form -->
       <h4 class="titleMultiLine flex-title">
         <div>
-          {{ 'LINE_CHART_1' | translate }} {{partnersDict[partner].label}} {{ 'LINE_CHART_2' | translate }}
+          {{ 'LINE_CHART_1' | translate }}
+          <span class="hightlight-inline-variable">&nbsp;{{partnersDict[partner].label}}&nbsp;</span> {{ 'LINE_CHART_2'
+          | translate }}
           <div class="inline-select">
             <ui-select
               ng-model="comparisonReporterEntity.selected"
@@ -285,10 +298,15 @@
           </span>
         </div>
       </h4>
+      <p class="paragraphBiz">
+        Exports : partner &#x2192; reporting <i>(reported as imports in reporting source)</i><br />
+        Imports : partner &#x2190; reporting <i>(reported as exports in reporting source)</i>
+      </p>
       <div ng-show="messagePercent">
         <p class="paragraphViz">
           The percentages are based on
-          <a href="/#worldTrade">world sum partners</a> of {{partnersDict[partner].label}}
+          <a href="/#worldTrade">world sum partners</a> of
+          <span class="hightlight-inline-variable">{{partnersDict[partner].label}}</span>
         </p>
       </div>
       <div id="select-lineChart">
