--- a/client/src/public/partials/corpus.html
+++ b/client/src/public/partials/corpus.html
@@ -9,9 +9,8 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'OPEN_INTRO_TITLE' | translate }}</h2>
-      <p>
-        {{ 'OPEN_PARA1' | translate }} <a href="https://github.com/medialab/ricardo_data" target="_blank">github</a>.
-      </p>
+      <p translate="OPEN_PARA1"></p>
+      <p><a href="./data/RICardo_trade_flows_deduplicated.csv">RICardo_trade_flows_deduplicated.csv</a></p>
     </div>
   </div>
 </div>
