--- a/client/src/public/partials/sources_glossary.html
+++ b/client/src/public/partials/sources_glossary.html
@@ -8,7 +8,7 @@
 <div class="container container-page">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <dl class="well">
+      <dl class="well" id="primary">
         <dt translate="GLOSSARY_SOURCES_primary_secondary"></dt>
         <dd translate="GLOSSARY_SOURCES_primary_secondary_content"></dd>
       </dl>
