--- a/client/src/public/partials/trade_glossary.html
+++ b/client/src/public/partials/trade_glossary.html
@@ -12,7 +12,7 @@
         <dt translate="GLOSSARY_TRADE_valuation"></dt>
         <dd translate="GLOSSARY_TRADE_valuation_content"></dd>
       </dl>
-      <dl class="well">
+      <dl class="well" id="#world">
         <dt translate="GLOSSARY_TRADE_world"></dt>
         <dd translate="GLOSSARY_TRADE_world_content"></dd>
       </dl>
