forgot to adapt home to new rate URL

--- a/client/src/public/partials/home.html
+++ b/client/src/public/partials/home.html
@@ -88,7 +88,7 @@
           <div class="col-6 col-sm-6 col-md-3">
             <div class="box-bg box-bg-rates">
               <div class="box-container">
-                <a href="#!/rates" class="btn btn-link box text-center">
+                <a href="#!/exchange_rates" class="btn btn-link box text-center">
                   <h2>Exchange rates</h2>
                   <p>{{ 'HOME_RATES_PARA' | translate }}</p>
                 </a>
