[Client] updated texts + debug links

--- a/client/src/public/partials/corpus.html
+++ b/client/src/public/partials/corpus.html
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'SOURCES_INTRO_TITLE' | translate }}</h2>
-      <p>{{ 'SOURCES_PARA1' | translate }}</p>
+      <p translate="SOURCES_PARA1"></p>
       <p><a href="./data/RICardo_sources.csv">RICardo_sources.csv</a></p>
     </div>
   </div>
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'RIC_INTRO_TITLE' | translate }}</h2>
-      <p>{{ 'RIC_PARA1' | translate }}</p>
+      <p translate="RIC_PARA1" />
       <p><a href="./data/RICardo_RICentities.csv">RICardo_RICentities.csv</a></p>
     </div>
   </div>
@@ -36,7 +36,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title-border">{{ 'EXCHANGES_INTRO_TITLE' | translate }}</h2>
-      <p>{{ 'EXCHANGES_PARA1' | translate }}</p>
+      <p translate="EXCHANGES_PARA1"></p>
       <p><a href="./data/RICardo_exchange_rates.csv">RICardo_exchange_rates.csv</a></p>
     </div>
   </div>
