--- a/client/src/public/partials/entities_glossary.html
+++ b/client/src/public/partials/entities_glossary.html
@@ -9,13 +9,11 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <dl class="well">
-        <dt>{{ 'GLOSSARY_ENTITIES_RICentities' | translate }}</dt>
-        <dd>
-          {{ 'GLOSSARY_ENTITIES_RICentities_content' | translate }}
-        </dd>
+        <dt translate="GLOSSARY_ENTITIES_RICentities"></dt>
+        <dd translate="GLOSSARY_ENTITIES_RICentities_content"></dd>
       </dl>
       <dl class="well">
-        <dt>{{ 'GLOSSARY_ENTITIES_GPH_entities' | translate }}</dt>
+        <dt translate="GLOSSARY_ENTITIES_GPH_entities"></dt>
         <dd translate="GLOSSARY_ENTITIES_GPH_entities_content"></dd>
       </dl>
       <dl class="well">
