[client] update website contents

--- a/client/src/public/partials/about.html
+++ b/client/src/public/partials/about.html
@@ -28,13 +28,9 @@
       <p translate="TEAM_PARA1" class="team"></p>
       <p translate="TEAM_PARA11" class="team"></p>
       <p translate="TEAM_PARA2" class="team"></p>
+      <p translate="TEAM_PARA3" class="team"></p>
     </div>
-    <div class="col-md-8 col-md-offset-2">
-      <div class="team-logotype">
-        <img ng-src="svg/sciences-po-medialab.svg" alt="Logotype SciencePo MEDIALAB" />
-        <img ng-src="svg/sciences-po-centre-histoire.svg" alt="Logotype SciencePo Centre d'histoire" />
-      </div>
-    </div>
+   
   </div>
 </div>
 <div class="container">
@@ -74,6 +70,10 @@
       </ul>
     </div>
     <div class="col-md-8 col-md-offset-2">
+      <div class="team-logotype">
+        <img ng-src="svg/sciences-po-medialab.svg" alt="Logotype SciencePo MEDIALAB" />
+        <img ng-src="svg/sciences-po-centre-histoire.svg" alt="Logotype SciencePo Centre d'histoire" />
+      </div>
       <div class="logotype-anr">
         <img ng-src="img/logotype-anr.png" alt="Agence Nationale de la Recherche" class="pull-left" />
         <span>{{ 'LOGOTYPE_ANR' | translate }}</span>
