--- a/client/src/public/partials/about.html
+++ b/client/src/public/partials/about.html
@@ -46,6 +46,7 @@
         <li><strong>{{ 'CONTRIBUTORS_NAMELIST5' | translate }}</strong>, {{ 'CONTRIBUTORS_LIST5' | translate }}</li>
         <li><strong>{{ 'CONTRIBUTORS_NAMELIST6' | translate }}</strong>, {{ 'CONTRIBUTORS_LIST6' | translate }}</li>
         <li><strong>{{ 'CONTRIBUTORS_NAMELIST7' | translate }}</strong>, {{ 'CONTRIBUTORS_LIST7' | translate }}</li>
+        <li><strong>{{ 'CONTRIBUTORS_NAMELIST8' | translate }}</strong>, {{ 'CONTRIBUTORS_LIST8' | translate }}</li>
       </ul>
     </div>
   </div>
